--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.probuilder": "4.5.0",
     "com.unity.progrids": "3.0.3-preview.6",
+    "com.unity.shadergraph": "10.3.2",
     "com.unity.terrain-tools": "3.0.2-preview.3",
     "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "3.0.1",
